--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tian-logger",
   "version": "1.0.0",
   "description": "A simple and configurable logger using async_hooks",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
